# encumcrypt

./: Decode_Encode.js  Encumcrypt Encryption.docx  README.md  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: AppContext.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/css/: styles.css
src/components/: MessageBox.tsx
src/pages/: Chat.tsx  Home.tsx
